--- a/client_side/resources/ui/passwords_edit_window.ui
+++ b/client_side/resources/ui/passwords_edit_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>480</height>
+    <width>414</width>
+    <height>586</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,19 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="error_label">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 0, 0);</string>
+       </property>
        <property name="text">
         <string/>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -29,13 +40,42 @@
     <layout class="QVBoxLayout" name="verticalLayout_6">
      <item>
       <widget class="QLabel" name="notes_label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Notes</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="notes_plainTextEdit"/>
+      <widget class="QPlainTextEdit" name="notes_plainTextEdit">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>68</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -43,20 +83,36 @@
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="login_label">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Login</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="login_lineEdit"/>
+      <widget class="QLineEdit" name="login_lineEdit">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
    <item row="8" column="0" colspan="2">
-    <layout class="QGridLayout" name="gridLayout_2">
+    <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,1" columnstretch="1,1,1,1,2">
      <item row="0" column="4">
       <widget class="QLabel" name="length_label">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Length</string>
        </property>
@@ -64,6 +120,11 @@
      </item>
      <item row="0" column="0" rowspan="2">
       <widget class="QCheckBox" name="capital_checkBox">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>A-Z</string>
        </property>
@@ -74,6 +135,11 @@
      </item>
      <item row="0" column="1" rowspan="2">
       <widget class="QCheckBox" name="lowercase_checkBox">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>a-z</string>
        </property>
@@ -81,6 +147,11 @@
      </item>
      <item row="0" column="2" rowspan="2">
       <widget class="QCheckBox" name="numbers_checkBox">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>0-9</string>
        </property>
@@ -88,6 +159,11 @@
      </item>
      <item row="0" column="3" rowspan="2">
       <widget class="QCheckBox" name="symbols_checkBox">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>%!@</string>
        </property>
@@ -95,6 +171,11 @@
      </item>
      <item row="1" column="4">
       <widget class="QSpinBox" name="length_spinBox">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="minimum">
         <number>1</number>
        </property>
@@ -112,6 +193,11 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="generate_pushButton">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Generate password</string>
        </property>
@@ -119,6 +205,11 @@
      </item>
      <item>
       <widget class="QPushButton" name="confirm_pushButton">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Confirm changes</string>
        </property>
@@ -130,13 +221,24 @@
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="service_label">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Service</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="service_lineEdit"/>
+      <widget class="QLineEdit" name="service_lineEdit">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -144,13 +246,24 @@
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="QLabel" name="password_label">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Password*</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="password_lineEdit"/>
+      <widget class="QLineEdit" name="password_lineEdit">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -158,6 +271,17 @@
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
       <widget class="QLabel" name="category_label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Category</string>
        </property>
@@ -165,6 +289,11 @@
      </item>
      <item>
       <widget class="QComboBox" name="category_comboBox">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="editable">
         <bool>true</bool>
        </property>
@@ -176,13 +305,24 @@
     <layout class="QVBoxLayout" name="verticalLayout_5">
      <item>
       <widget class="QLabel" name="url_label">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>URL</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="url_lineEdit"/>
+      <widget class="QLineEdit" name="url_lineEdit">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -190,6 +330,30 @@
     <layout class="QVBoxLayout" name="verticalLayout_7">
      <item>
       <widget class="QProgressBar" name="progressBar">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+         <stylestrategy>PreferAntialias</stylestrategy>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QProgressBar {
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
+	text-align: center;
+	text-shadow: 0px 0px 5px black;
+}
+QProgressBar::chunk {
+	background: transparent;
+	background: qlineargradient(
+		x1: 0, y1: 0, x2: 1, y2: 0,
+		stop: 0 rgb(255, 0, 0),
+		stop: 1 rgb{max_color}
+	);
+}</string>
+       </property>
        <property name="maximum">
         <number>128</number>
        </property>
@@ -197,10 +361,26 @@
         <number>0</number>
        </property>
        <property name="textVisible">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="format">
         <string>%v bits</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="bits_label">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -208,6 +388,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res.qrc"/>
+ </resources>
  <connections/>
 </ui>
