--- a/client_side/resources/ui/auth_window.ui
+++ b/client_side/resources/ui/auth_window.ui
@@ -13,7 +13,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>339</width>
+    <width>356</width>
     <height>310</height>
    </rect>
   </property>
@@ -267,7 +267,7 @@
       <item>
        <widget class="QPushButton" name="auth_pushButton">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>180</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -300,7 +300,7 @@
       <item>
        <widget class="QPushButton" name="registration_pushButton">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
